@@ -1,3 +1,7 @@
+Changelog 0.4.29 [20231001]:
+- Added New Setting "Hide Unaired Episodes"
+- Made Rare Bugs for Watchlist Smaller
+
 Changelog 0.4.28 [20230929]:
 - Reverted art poster typo error
 
